// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectedToken renders the component with initial props 1`] = `
<div>
  <div
    class="selected-token"
  >
    <div
      class="selected-token-list selected-token-list__selector-closed-container selected-token-input-pair__selector--closed"
      data-testid="selected-token-list"
      tabindex="0"
    >
      <div
        class="selected-token-list__selector-closed"
      >
        <div
          class=""
        >
          <img
            alt="ETH"
            class="url-icon selected-token-list__selector-closed-icon"
            src="iconUrl"
          />
        </div>
        <div
          class="selected-token-list__labels selected-token-list__labels--with-icon"
        >
          <div
            class="selected-token-list__item-labels"
          >
            <span
              class="selected-token-list__closed-primary-label"
            >
              ETH
            </span>
          </div>
        </div>
      </div>
      <span
        class="mm-box mm-icon mm-icon--size-xs mm-box--margin-right-3 mm-box--display-inline-block mm-box--color-icon-alternative"
        style="mask-image: url('./images/icons/arrow-down.svg');"
      />
    </div>
  </div>
</div>
`;

exports[`SelectedToken renders the component with no token selected 1`] = `
<div>
  <div
    class="selected-token"
  >
    <div
      class="selected-token-list selected-token-list__selector-closed-container selected-token-input-pair__selector--closed"
      data-testid="selected-token-list"
      tabindex="0"
    >
      <div
        class="selected-token-list__selector-closed"
      >
        <div
          class="selected-token-list__labels"
        >
          <div
            class="selected-token-list__item-labels"
          >
            <span
              class="selected-token-list__closed-primary-label selected-token-list__select-default"
            >
              Select token
            </span>
          </div>
        </div>
      </div>
      <span
        class="mm-box mm-icon mm-icon--size-xs mm-box--margin-right-3 mm-box--display-inline-block mm-box--color-icon-alternative"
        style="mask-image: url('./images/icons/arrow-down.svg');"
      />
    </div>
  </div>
</div>
`;
